Add internationalization support to navigation template

--- a/core/modules/navigation/scss/_navigation.scss
+++ b/core/modules/navigation/scss/_navigation.scss
@@ -21,7 +21,7 @@ body.#{$prefix}-off-canvas {
 ##{$prefix} {
 	z-index: $z-index;
 
-	* {
+	*:not(.#{$prefix}-code--list > *) {
 		font-size: 14px;
 		font-family: Arial, sans-serif;
 	}
