add class name to body

--- a/src/layouts/application.hbs
+++ b/src/layouts/application.hbs
@@ -20,7 +20,7 @@
 	{{> $$engineHeader}}
 	<!-- /NEUTRON HEADER -->
 </head>
-<body>
+<body class="{{partialClass}}">
 	{{ $yield }}
 
 	<!-- NEUTRON FOOTER -->
