--- a/src/layouts/clean.hbs
+++ b/src/layouts/clean.hbs
@@ -9,7 +9,7 @@
 	<!-- /NEUTRON HEADER -->
 	{{outputFor "css"}}
 </head>
-<body>
+<body class="{{partialClass}}">
 	{{ $yield }}
 
 	<!-- NEUTRON FOOTER -->
