--- a/core/modules/templates/footer.html
+++ b/core/modules/templates/footer.html
@@ -9,4 +9,4 @@
 		}
 	};
 </script>
-<script src="{{assetsPath}}styleguide/modules/navigation/js/scripts.min.js"></script>
+<script src="{{assetsPath}}styleguide/modules/navigation/js/scripts.min.js" asyc></script>
