--- a/core/modules/navigation/template/index.html
+++ b/core/modules/navigation/template/index.html
@@ -73,7 +73,7 @@
 
 <div class="neutron-code-frame">
 	<div class="neutron-code-frame--close">
-		<a href="javascript:;" class="neutron-button--close__link">
+		<a href="javascript:;" class="neutron-button--close__link" title="{{close_code_frame}}">
 			<span>{{close}}</span>
 			<svg width="1792" height="1792" viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg"><path d="M1490 1322q0 40-28 68l-136 136q-28 28-68 28t-68-28l-294-294-294 294q-28 28-68 28t-68-28l-136-136q-28-28-28-68t28-68l294-294-294-294q-28-28-28-68t28-68l136-136q28-28 68-28t68 28l294 294 294-294q28-28 68-28t68 28l136 136q28 28 28 68t-28 68l-294 294 294 294q28 28 28 68z"/></svg>
 		</a>
@@ -94,7 +94,7 @@
 
 <div class="neutron-lightbox neutron-qr-code-wrapper">
 	<div class="neutron-lightbox--content neutron-qr-code-frame">
-		<a href="javascript:;" class="neutron-button--close__link">
+		<a href="javascript:;" class="neutron-button--close__link" title="{{close_qr_code}}">
 			<span>{{close}}</span>
 			<svg width="1792" height="1792" viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg"><path d="M1490 1322q0 40-28 68l-136 136q-28 28-68 28t-68-28l-294-294-294 294q-28 28-68 28t-68-28l-136-136q-28-28-28-68t28-68l294-294-294-294q-28-28-28-68t28-68l136-136q28-28 68-28t68 28l294 294 294-294q28-28 68-28t68 28l136 136q28 28 28 68t-28 68l-294 294 294 294q28 28 28 68z"/></svg>
 		</a>
