* Add info lightbox * Fix some minor issues * Remove some unused code * Increase menu width in 10px

--- a/core/modules/navigation/scss/_navigation.scss
+++ b/core/modules/navigation/scss/_navigation.scss
@@ -450,6 +450,10 @@ body.#{$prefix}-off-canvas {
 			@include prefix(box-sizing, border-box);
 			color: $txtcolor;
 
+			a {
+				color: $txtcolor;
+			}
+
 			&__headline,
 			&__text {
 				color: $txtcolor;
