--- a/core/modules/navigation/template/index.html
+++ b/core/modules/navigation/template/index.html
@@ -65,6 +65,12 @@
 					<path d="M1615 0q70 0 122.5 46.5t52.5 116.5q0 63-45 151-332 629-465 752-97 91-218 91-126 0-216.5-92.5t-90.5-219.5q0-128 92-212l638-579q59-54 130-54zm-909 1034q39 76 106.5 130t150.5 76l1 71q4 213-129.5 347t-348.5 134q-123 0-218-46.5t-152.5-127.5-86.5-183-29-220q7 5 41 30t62 44.5 59 36.5 46 17q41 0 55-37 25-66 57.5-112.5t69.5-76 88-47.5 103-25.5 125-10.5z"/>
 				</svg>
 			</a>
+			<a href="javascript:;" class="neutron-button--info" title="{{info_description}}">
+				<span>{{info}}</span>
+				<svg viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg">
+					<path d="M1152 1376v-160q0-14-9-23t-23-9h-96v-512q0-14-9-23t-23-9h-320q-14 0-23 9t-9 23v160q0 14 9 23t23 9h96v320h-96q-14 0-23 9t-9 23v160q0 14 9 23t23 9h448q14 0 23-9t9-23zm-128-896v-160q0-14-9-23t-23-9h-192q-14 0-23 9t-9 23v160q0 14 9 23t23 9h192q14 0 23-9t9-23zm640 416q0 209-103 385.5t-279.5 279.5-385.5 103-385.5-103-279.5-279.5-103-385.5 103-385.5 279.5-279.5 385.5-103 385.5 103 279.5 279.5 103 385.5z"/>
+				</svg>
+			</a>
 		</div>
 
 		<ul class="neutron-menu--items"></ul>
@@ -101,5 +107,16 @@
 		<h1 class="neutron-lightbox--content__headline">{{export_url}}</h1>
 		<p class="neutron-lightbox--content__text">{{export_message}}: <span></span></p>
 		<div id="qrcode"></div>
+	</div>
+</div>
+
+<div class="neutron-lightbox neutron-info-wrapper">
+	<div class="neutron-lightbox--content neutron-info-frame">
+		<a href="javascript:;" class="neutron-button--close__link" title="{{close_info}}">
+			<span>{{close}}</span>
+			<svg width="1792" height="1792" viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg"><path d="M1490 1322q0 40-28 68l-136 136q-28 28-68 28t-68-28l-294-294-294 294q-28 28-68 28t-68-28l-136-136q-28-28-28-68t28-68l294-294-294-294q-28-28-28-68t28-68l136-136q28-28 68-28t68 28l294 294 294-294q28-28 68-28t68 28l136 136q28 28 28 68t-28 68l-294 294 294 294q28 28 28 68z"/></svg>
+		</a>
+		<h1 class="neutron-lightbox--content__headline">About Neutron</h1>
+		<p class="neutron-lightbox--content__text">Neutron is a tool developed to create documentation in atomic design style. Click <a href="https://github.com/vebersol/neutron" target="_blank">here</a> to read more about Neutron.</p>
 	</div>
 </div>
