--- a/core/modules/navigation/scss/bluewood.scss
+++ b/core/modules/navigation/scss/bluewood.scss
@@ -16,6 +16,8 @@ $menu-border: $burnt-sienna;
 $disabled-svg-fill: $white;
 $documentation-bg-color: $heavy-metal;
 $documentation-color: $malibu;
+$documentation-color-block: $jungle-green;
+$documentation-color-bold: $white;
 $documentation-font: arial, sans-serif;
 $link-color: $burnt-sienna;
 $documentation-link-color: $flamingo;
