--- a/core/modules/navigation/scss/db.scss
+++ b/core/modules/navigation/scss/db.scss
@@ -13,6 +13,8 @@ $menu-border: $black;
 $disabled-svg-fill: $white;
 $documentation-bg-color: $heavy-metal;
 $documentation-color: $white;
+$documentation-color-block: $dixie;
+$documentation-color-bold: $dixie;
 $documentation-font: arial, sans-serif;
 $link-color: $black;
 $documentation-link-color: $dixie;
