--- a/core/modules/navigation/scss/default.scss
+++ b/core/modules/navigation/scss/default.scss
@@ -15,6 +15,8 @@ $menu-border: $orange;
 $disabled-svg-fill: $dove-gray;
 $documentation-bg-color: $heavy-metal;
 $documentation-color: $spring-wood;
+$documentation-color-block: $orange;
+$documentation-color-bold: $orange;
 $documentation-font: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
 $link-color: $orange;
 $documentation-link-color: $orange;
