improve patterns documentation

--- a/src/patterns/atoms/text/paragraph.hbs
+++ b/src/patterns/atoms/text/paragraph.hbs
@@ -1,1 +1,7 @@
+{{!!
+  A paragraph element which receives any text as parameter.
+
+  * **text** (String)
+  _Supported values:_ Any text that should be a paragraph.
+}}
 <p>{{text}}</p>
