--- a/src/patterns/molecules/forms/search-bar.hbs
+++ b/src/patterns/molecules/forms/search-bar.hbs
@@ -1,3 +1,6 @@
+{{!!
+  Search form molecule with a search input and a submit button.
+}}
 <form class="navbar-form navbar-left" role="search">
 	<div class="form-group">
 		{{ render "atoms/forms/input:form-control" type="text" placeholder="Search" }}
