--- a/src/patterns/organisms/highlights/jumbotron.hbs
+++ b/src/patterns/organisms/highlights/jumbotron.hbs
@@ -1,3 +1,11 @@
+{{!!
+  Jumbotron is highlight box.
+
+  * **headline** (Object)
+  _Supported values:_ headline receives an object that contains all properties that can be used in `atoms/text/headline`.
+  * **intro** (Object)
+  _Supported values:_ intro receives an object that contains all properties that can be used in `atoms/text/paragraph`.
+}}
 <div class="jumbotron">
 	{{#with headline}}
 	{{ render "atoms/text/headline" }}
