Add theme and menu behavior changing with local storage and remove css call from navigation template

--- a/core/modules/navigation/scss/bluewood.scss
+++ b/core/modules/navigation/scss/bluewood.scss
@@ -1,5 +1,6 @@
 $burnt-sienna: #EB7260;
 $malibu: #77C5F7;
+$dove-gray: #666666;
 $white: #FFFFFF;
 $heavy-metal: #272822;
 $pickled-bluewood: #354458;
@@ -13,7 +14,7 @@ $tab-color: $white;
 $tab-active: $heavy-metal;
 $active-navigation: $burnt-sienna;
 $menu-border: $burnt-sienna;
-$disabled-svg-fill: $white;
+$disabled-svg-fill: $dove-gray;
 $documentation-bg-color: $heavy-metal;
 $documentation-color: $malibu;
 $documentation-color-block: $jungle-green;
