--- a/core/modules/navigation/scss/db.scss
+++ b/core/modules/navigation/scss/db.scss
@@ -1,5 +1,6 @@
 $dixie: #E29317;
 $white: #FFFFFF;
+$dove-gray: #666666;
 $black: #000000;
 $heavy-metal: #272822;
 
@@ -10,7 +11,7 @@ $tab-color: $white;
 $tab-active: $heavy-metal;
 $active-navigation: $black;
 $menu-border: $black;
-$disabled-svg-fill: $white;
+$disabled-svg-fill: $dove-gray;
 $documentation-bg-color: $heavy-metal;
 $documentation-color: $white;
 $documentation-color-block: $dixie;
