--- a/core/modules/templates/footer.html
+++ b/core/modules/templates/footer.html
@@ -5,7 +5,8 @@
 			reverseDependencies: [],
 			patternName: "{{patternName}}",
 			assetsPath: "{{assetsPath}}",
-			menuBehavior: "{{menuBehavior}}"
+			menuBehavior: "{{menuBehavior}}",
+			cssTheme: "{{cssTheme}}"
 		}
 	};
 </script>
