--- a/core/modules/navigation/scss/_navigation.scss
+++ b/core/modules/navigation/scss/_navigation.scss
@@ -309,32 +309,17 @@ body.#{$prefix}-off-canvas {
 		}
 	}
 
-	.#{$prefix}-menu--theme {
-		position: absolute;
-		top: -$buttonSize * 2;
-		left: 0;
+	.#{$prefix}-settings {
 		z-index: $z-index + 7;
 		width: 100%;
 		@include prefix(transition, top 0.5s ease-out);
 
-		&__opened {
-			top: 0;
-		}
 
-		&__select {
+		input[type=radio] {
 			position: relative;
-			background-color: $bgcolor;
-			padding: 5px;
-			@include prefix(box-sizing, border-box);
-
-			select {
-				border-radius: 0;
-				height: 33px;
-				color: $input-text-color;
-				width: 100%;
-				outline: none;
-				padding: 4px;
-			}
+			top: 1px;
+			left: 2px;
+			outline: none;
 		}
 	}
 
