--- a/core/modules/navigation/template/index.html
+++ b/core/modules/navigation/template/index.html
@@ -23,16 +23,6 @@
 			</div>
 		</div>
 
-		<div class="neutron-menu--theme">
-			<div class="neutron-menu--theme__select">
-				<select>
-					<option value="default">{{default}}</option>
-					<option value="bluewood">BlueWood</option>
-					<option value="db">DB</option>
-				</select>
-			</div>
-		</div>
-
 		<div class="neutron-navigation">
 			<a href="javascript:;" class="neutron-button--search" title="{{search_description}}">
 				<span>{{search}}</span>
@@ -59,16 +49,10 @@
 					M5.8,58.6h17.5V41.2H5.8V58.6z M5.8,23.7h17.5V6.2H5.8V23.7z M40.7,23.7h17.5V6.2H40.7V23.7z M29.1,35.3v29.1H0V35.3H29.1z M52.4,58.6v5.8h-5.8v-5.8H52.4z M64,58.6v5.8h-5.8v-5.8H64z M64,35.3v17.5H46.5V47h-5.8v17.5h-5.8V35.3h17.5v5.8h5.8v-5.8H64z M29.1,0.4v29.1H0V0.4H29.1z M64,0.4v29.1H34.9V0.4H64z"/>
 				</svg>
 			</a>
-			<a href="javascript:;" class="neutron-button--theme" title="{{themes_description}}">
-				<span>{{themes}}</span>
-				<svg viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg">
-					<path d="M1615 0q70 0 122.5 46.5t52.5 116.5q0 63-45 151-332 629-465 752-97 91-218 91-126 0-216.5-92.5t-90.5-219.5q0-128 92-212l638-579q59-54 130-54zm-909 1034q39 76 106.5 130t150.5 76l1 71q4 213-129.5 347t-348.5 134q-123 0-218-46.5t-152.5-127.5-86.5-183-29-220q7 5 41 30t62 44.5 59 36.5 46 17q41 0 55-37 25-66 57.5-112.5t69.5-76 88-47.5 103-25.5 125-10.5z"/>
-				</svg>
-			</a>
 			<a href="javascript:;" class="neutron-button--info" title="{{info_description}}">
 				<span>{{info}}</span>
 				<svg viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg">
-					<path d="M1152 1376v-160q0-14-9-23t-23-9h-96v-512q0-14-9-23t-23-9h-320q-14 0-23 9t-9 23v160q0 14 9 23t23 9h96v320h-96q-14 0-23 9t-9 23v160q0 14 9 23t23 9h448q14 0 23-9t9-23zm-128-896v-160q0-14-9-23t-23-9h-192q-14 0-23 9t-9 23v160q0 14 9 23t23 9h192q14 0 23-9t9-23zm640 416q0 209-103 385.5t-279.5 279.5-385.5 103-385.5-103-279.5-279.5-103-385.5 103-385.5 279.5-279.5 385.5-103 385.5 103 279.5 279.5 103 385.5z"/>
+					<path d="M1152 896q0-106-75-181t-181-75-181 75-75 181 75 181 181 75 181-75 75-181zm512-109v222q0 12-8 23t-20 13l-185 28q-19 54-39 91 35 50 107 138 10 12 10 25t-9 23q-27 37-99 108t-94 71q-12 0-26-9l-138-108q-44 23-91 38-16 136-29 186-7 28-36 28h-222q-14 0-24.5-8.5t-11.5-21.5l-28-184q-49-16-90-37l-141 107q-10 9-25 9-14 0-25-11-126-114-165-168-7-10-7-23 0-12 8-23 15-21 51-66.5t54-70.5q-27-50-41-99l-183-27q-13-2-21-12.5t-8-23.5v-222q0-12 8-23t19-13l186-28q14-46 39-92-40-57-107-138-10-12-10-24 0-10 9-23 26-36 98.5-107.5t94.5-71.5q13 0 26 10l138 107q44-23 91-38 16-136 29-186 7-28 36-28h222q14 0 24.5 8.5t11.5 21.5l28 184q49 16 90 37l142-107q9-9 24-9 13 0 25 10 129 119 165 170 7 8 7 22 0 12-8 23-15 21-51 66.5t-54 70.5q26 50 41 98l183 28q13 2 21 12.5t8 23.5z"/>
 				</svg>
 			</a>
 		</div>
@@ -117,6 +101,24 @@
 			<svg width="1792" height="1792" viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg"><path d="M1490 1322q0 40-28 68l-136 136q-28 28-68 28t-68-28l-294-294-294 294q-28 28-68 28t-68-28l-136-136q-28-28-28-68t28-68l294-294-294-294q-28-28-28-68t28-68l136-136q28-28 68-28t68 28l294 294 294-294q28-28 68-28t68 28l136 136q28 28 28 68t-28 68l-294 294 294 294q28 28 28 68z"/></svg>
 		</a>
 		<h1 class="neutron-lightbox--content__headline">About Neutron</h1>
-		<p class="neutron-lightbox--content__text">Neutron is a tool developed to create documentation in atomic design style. Click <a href="https://github.com/vebersol/neutron" target="_blank">here</a> to read more about Neutron.</p>
+		<p class="neutron-lghtbox--content__text">Neutron is a tool developed to create documentation in atomic design style. Click <a href="https://github.com/vebersol/neutron" target="_blank">here</a> to read more about Neutron.</p>
+
+		<h2 class="neutron-lightbox--content__headline">Settings</h2>
+		<div class="neutron-settings">
+			<div class="neutron-settings__form neutron-settings--theme">
+				<h4>Theme</h4>
+
+				<input type="radio" value="default" id="theme-default" name="theme" checked> <label for="theme-default">{{default}}</label>
+				<input type="radio" value="bluewood" id="theme-bluewood" name="theme"> <label for="theme-bluewood">Bluewood</label>
+				<input type="radio" value="db" id="theme-db" name="theme"> <label for="theme-db">DB</label>
+			</div>
+
+			<div class="neutron-settings__form neutron-settings--menu-behavior">
+				<h4>Menu Behavior</h4>
+
+				<input type="radio" value="default" id="behavior-default" name="menuBehavior" checked> <label for="behavior-default">{{default}}</label>
+				<input type="radio" value="off-canvas" id="behavior-off-canvas" name="menuBehavior"> <label for="behavior-off-canvas">Off-Canvas</label>
+			</div>
+		</div>
 	</div>
 </div>
