--- a/core/modules/templates/index.hbs
+++ b/core/modules/templates/index.hbs
@@ -1,41 +1,82 @@
 <section id="neutron-welcome-screen">
 	<h1>Hello Neutron!</h1>
 
-	<p>Welcome to Neutron Atomic Design Tool. These pages are automatically generated as a static site.</p>
+	<p>Welcome to <a href="https://github.com/vebersol/neutron/">Neutron</a> Atomic Design Tool. These pages are automatically generated as a static site.</p>
 
 	<h2>How to use Neutron?</h2>
 
-	<p>To use Neutron is quite simple. At the left/right corner you may see a button, the <svg viewBox="0 0 64 64" class="neutron-svg-inline"><use class="neutron-svg-icon" xlink:href="#neutron-logo"></use></svg> button. To activate Neutron Navigation, you just need to press the key <strong>n</strong> or click/touch on this button.</p>
+	<p>To use <strong>Neutron</strong> is quite simple. At the left/right corner you may see a button, the <svg viewBox="0 0 64 64" class="neutron-svg-inline"><use class="neutron-svg-icon" xlink:href="#neutron-logo"></use></svg> button. To activate <strong>Neutron</strong> Navigation, you just need to press the key <strong>n</strong> or click/touch on this button.</p>
 
-	<p>The Neutron navigation bar consists in:</p>
+	<p>The <strong>Neutron</strong> navigation bar consists in:</p>
 
 	<ul>
 		<li>
 			<svg viewBox="0 0 64 64" class="neutron-svg-inline">
 				<use class="neutron-svg-icon" xlink:href="#neutron-search"></use>
 			</svg>
-			Search Button - opens the search input and find your desired pattern. Shortcut: <strong>f</strong>
+			Search Button - opens the search input and find your desired pattern
 		</li>
 		<li>
 			<svg viewBox="0 0 64 64" class="neutron-svg-inline">
 				<use class="neutron-svg-icon" xlink:href="#neutron-code-frame"></use>
 			</svg>
-			Code Frame Button - opens a frame below containing your HTML and Handlebars markup, including the pattern documentation. It also shows the dependencies and reverse dependencies list. Shortcut: <strong>c</strong>
+			Code Frame Button - opens a frame below containing your HTML and Handlebars markup, including the pattern documentation. It also shows the dependencies and reverse dependencies list.
 		</li>
 		<li>
 			<svg viewBox="0 0 64 64" class="neutron-svg-inline">
 				<use class="neutron-svg-icon" xlink:href="#neutron-qr-code"></use>
 			</svg>
-			QR Code Button - opens a lightbox with QR Code to easily load it in your mobile device. Shortcut: <strong>q</strong>
+			QR Code Button - opens a lightbox with QR Code to easily load it in your mobile device.
 		</li>
 		<li>
 			<svg viewBox="0 0 1792 1792" class="neutron-svg-inline">
 				<use class="neutron-svg-icon" xlink:href="#neutron-info"></use>
 			</svg>
-			Settings Button - opens a lightbox with basic information and settings. Shortcut: <strong>s</strong>
+			Settings Button - opens a lightbox with basic information and settings.
 		</li>
 		<li>Main menu including all patterns: Atoms, Molecules, Organisms, Templates, Pages</li>
 	</ul>
 
-	<p><cite>Neutron is attached by default in all generated pages as a standalone script, it means you must have Javascript enabled by default.</cite></p>
+	<h2>Shortcuts</h2>
+
+	<table>
+		<thead>
+			<tr>
+				<th>Key</th>
+				<th>Description</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td><strong>n</strong></td>
+				<td>Show <strong>Neutron</strong> navigation bar</td>
+			</tr>
+			<tr>
+				<td><strong>f</strong></td>
+				<td>Find patterns</td>
+			</tr>
+			<tr>
+				<td><strong>c</strong></td>
+				<td>Toggle code frame (when in a pattern)</td>
+			</tr>
+			<tr>
+				<td><strong>q</strong></td>
+				<td>Toggle QR Code window</td>
+			</tr>
+			<tr>
+				<td><strong>s</strong></td>
+				<td>Toggle settings window</td>
+			</tr>
+			<tr>
+				<td><strong>m</strong></td>
+				<td>Focus first menu item to enable keyboard navigation</td>
+			</tr>
+		</tbody>
+	</table>
+
+	<h2>Read More</h2>
+
+	<p>To read more about <strong>Neutron</strong>, please check our <a href="https://github.com/vebersol/neutron/blob/master/README.md">README</a>.</p>
+
+	<p><em><strong>Neutron</strong> is attached by default in all generated pages as a standalone script, it means you must have Javascript enabled by default.</em></p>
 </section>
