Add background color to welcome screen. to avoid inheritance from default layout css.

--- a/core/modules/navigation/scss/_navigation.scss
+++ b/core/modules/navigation/scss/_navigation.scss
@@ -587,6 +587,10 @@ body.#{$prefix}-off-canvas {
 	}
 }
 
+.#{$prefix}-welcome-page {
+	background-color: $txtcolor;
+}
+
 ##{$prefix}-welcome-screen {
 	width: 60%;
 	padding: 20px;
