--- a/core/modules/navigation/scss/_navigation.scss
+++ b/core/modules/navigation/scss/_navigation.scss
@@ -619,6 +619,8 @@ body.#{$prefix}-off-canvas {
 
 	table {
 		width: 100%;
+		border-spacing: 0;
+		border-collapse: collapse;
 
 		th, td {
 			border: 1px solid $bgcolor;
