change assets path from welcome page

--- a/core/modules/templates/index.hbs
+++ b/core/modules/templates/index.hbs
@@ -30,7 +30,7 @@
 		</li>
 		<li>
 			<svg viewBox="0 0 1792 1792" class="neutron-svg-inline">
-				<use class="neutron-svg-icon" xlink:href="#neutron-info"></use>
+				<use class="neutron-svg-icon" xlink:href="#neutron-settings"></use>
 			</svg>
 			Settings Button - opens a lightbox with basic information and settings.
 		</li>
