fix css issue in menu and improve structure creation

--- a/core/modules/navigation/scss/_navigation.scss
+++ b/core/modules/navigation/scss/_navigation.scss
@@ -245,6 +245,7 @@ body.#{$prefix}-off-canvas {
 			display: inline-block;
 			width: 0;
 			height: 0;
+			opacity: 0;
 
 			& + label::before, {
 				box-sizing: border-box;
