--- a/src/layouts/clean.hbs
+++ b/src/layouts/clean.hbs
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-	<title>{{#if title}}{{title}}{{else}}Clean Layout{{/if}}</title>
+	<title>{{#if title}}{{title}}{{else}}Neutron - Clean Layout{{/if}}</title>
 	<!-- NEUTRON HEADER-->
 	{{> $$engineHeader }}
 	<!-- /NEUTRON HEADER -->
