--- a/core/modules/navigation/scss/bluewood.scss
+++ b/core/modules/navigation/scss/bluewood.scss
@@ -27,6 +27,9 @@ $dependencies-list-color: $malibu;
 $code-frame-bg: $pickled-bluewood;
 $code-frame-color: $malibu;
 $lightbox-overlay-bg: rgba(0, 0, 0, 0.65);
+$status-in-progress: rgb(249, 228, 37);
+$status-done: rgb(166, 226, 46);
+$status-deprecated: rgb(249, 38, 114);
 
 $buttonSize: 33px;
 $gap: 2px;
