--- a/core/modules/navigation/scss/db.scss
+++ b/core/modules/navigation/scss/db.scss
@@ -24,6 +24,9 @@ $dependencies-list-color: $white;
 $code-frame-bg: $black;
 $code-frame-color: $white;
 $lightbox-overlay-bg: rgba(0, 0, 0, 0.65);
+$status-in-progress: rgb(249, 228, 37);
+$status-done: rgb(166, 226, 46);
+$status-deprecated: rgb(249, 38, 114);
 
 $buttonSize: 33px;
 $gap: 2px;
