--- a/core/modules/navigation/template/index.html
+++ b/core/modules/navigation/template/index.html
@@ -88,6 +88,7 @@
 		</a>
 	</div>
 	<div class="neutron-code-frame--patterns">
+		<p id="neutron-status"><span></span></p>
 		<p id="neutron-dependencies-list">{{dependencies}}: <span></span></p>
 		<p id="neutron-reverse-dependencies-list">{{reverse_dependencies}}: <span></span></p>
 	</div>
