change javascript approach to browserify

--- a/core/modules/templates/footer.html
+++ b/core/modules/templates/footer.html
@@ -6,7 +6,8 @@
 			patternName: "{{patternName}}",
 			assetsPath: "{{assetsPath}}",
 			menuBehavior: "{{menuBehavior}}",
-			cssTheme: "{{cssTheme}}"
+			cssTheme: "{{cssTheme}}",
+			language: "{{language}}"
 		}
 	};
 </script>
